packages/@testuj.to/react/src/components/ProductCard/styles.css
.tt-product-card-warpper {
  display: flex;
  flex-direction: column;
  max-width: 100%;
  cursor: pointer;
  box-sizing: border-box;
}

.tt-product-card-main {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  position: relative;
  width: 384px;
  overflow: hidden;
  box-sizing: border-box;
  max-width: 100%;
  height: auto;
  aspect-ratio: 384/264;
}

.tt-product-card-image {
  border-radius: 20px;
  object-fit: cover;
  z-index: 0;
  overflow: hidden;
}

.tt-product-card-tags {
  position: absolute;
  bottom: 1rem;
  left: 1rem;
  z-index: 1;
  display: flex;
  flex-direction: row;
}

.tt-product-card-tag {
  margin-right: 0.4rem;
}

.tt-product-card-tag:last-child {
  margin-right: 0;
}

.tt-product-card-label {
  margin-top: 0.6rem;
}

